--- a/src/app/domaine/domaine.component.html
+++ b/src/app/domaine/domaine.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="this.role == 'ROLE_ADMIN'">
   <h2>Gestion de domaines</h2>
   <mat-form-field appearance="outline" class="filter">
     <mat-label>Filter</mat-label>
