--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -52,10 +52,11 @@
   
   
   <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" (click)="drawer.toggle()" aria-label="Example icon-button with menu icon">
+    <!--button mat-icon-button class="example-icon" (click)="drawer.toggle()" aria-label="Example icon-button with menu icon">
       <mat-icon>menu</mat-icon>
-    </button>
-    <span>FormaGest</span>
+    </button-->
+
+    <img src="../../assets/Gestion.png" style="width: 10%; height: 85%;" (click)="drawer.toggle()">
     <span class="example-spacer"></span>
     
     <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon" (click)="logout()">
@@ -70,7 +71,7 @@
         <a class="liste" *ngIf="this.role == 'ROLE_ADMIN'" mat-list-item routerLink="/home/user" > <mat-icon>account_box</mat-icon>  Utilisateurs</a>
         <a class="liste" *ngIf="this.role == 'ROLE_ADMIN'" mat-list-item routerLink="/home/domaine" ><mat-icon>stars</mat-icon> Domaine</a>
         <a class="liste" *ngIf="this.role == 'ROLE_USER'" mat-list-item routerLink="/home/formateur" ><mat-icon>perm_contact_calendar</mat-icon> Formateur</a>
-        <a class="liste" *ngIf="this.role == 'ROLE_ADMIN'" mat-list-item routerLink="/home/formation" ><mat-icon>book</mat-icon>  Formation</a>
+        <a class="liste" *ngIf="this.role == 'ROLE_USER'" mat-list-item routerLink="/home/formation" ><mat-icon>book</mat-icon>  Formation</a>
         <a class="liste" *ngIf="this.role == 'ROLE_ADMIN'" mat-list-item routerLink="/home/organisme" ><mat-icon>account_balance</mat-icon>  Organisme</a>
         <a class="liste" *ngIf="this.role == 'ROLE_USER'" mat-list-item routerLink="/home/participant" ><mat-icon>supervisor_account</mat-icon>  Participant</a>
         <a class="liste" *ngIf="this.role == 'ROLE_ADMIN'" mat-list-item routerLink="/home/pays"><mat-icon>language</mat-icon> Pays</a>
@@ -79,6 +80,18 @@
       </mat-nav-list>
     </mat-drawer>
   
+  <!--div class="container" style="margin-top: 2%;">
+    <mat-grid-list cols="4" rowHeight="100px">
+      <mat-grid-tile
+          *ngFor="let tile of tiles"
+          [colspan]="tile.cols"
+          [rowspan]="tile.rows"
+          [style.background]="tile.color">
+        {{tile.text}}
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div-->
+
     <div >
         <router-outlet></router-outlet>
     </div>
